--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ngx-formly/schematics": "^5.5.12",
     "@types/jquery": "^3.3.32",
     "bootstrap-v4-rtl": "^4.4.1-1",
     "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.5.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ngx-formly/core": "^5.0.0",
+    "@ngx-formly/bootstrap": "^5.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
